# electrotype

./: .gitignore  FreeTypeGL.cabal  README.md  Setup.hs  electrotype.cabal
Graphics/Rendering/: Electrotype.hs  FreeTypeGL.hsc
Graphics/Rendering/Electrotype/Baked/: Shaders.hs  Shaders.hs_template
Graphics/Rendering/Electrotype/Baked/Shaders/: TH.hs
Graphics/Rendering/Electrotype/Internal/: Markup.hsc  Shader.hsc  TextureFont.hsc  VertexBuffer.hsc
Graphics/Rendering/FreeTypeGL/: Style.hs
Graphics/Rendering/FreeTypeGL/Internal/: Font.hs  Markup.hsc  Shader.hsc  TextBuffer.hsc  TextureFont.hsc  VertexBuffer.hsc
shaders/: agg.frag  agg.vert  distance-field.frag  distance-field.vert  text.frag  text.vert
src/: glyph-cache.c  text-buffer.c  text-buffer.h  texture-atlas.c  texture-font.c  utils.c  utils.h  vertex-buffer.c
src/shaders/: simple2d.frag  simple2d.vert
