Name:                electrotype
Version:             0.1.0.0
Synopsis:            Reasonably fast text rendering in OpenGL.

Description:         Use FreeType to render glyph bitmaps to textures, and
                     then render to the screen using those textures.
                     .
                     Similar to FTGL in some ways, but with fewer features (no
                     mesh-from-font creation, no direct pixel rendering).
                     .
                     This package is experimental. It was originally based on
                     the FreeTypeGL package by by Eyal Lotem
                     (<http://hackage.haskell.org/package/FreeTypeGL>) but has
                     diverged significantly.
                     .
                     Windows builds may be broken. Contributions are welcome.
                     .
                     This package makes use of the great and ubiquitous
                     FreeType library (<http://www.freetype.org/>) for glyph
                     and font handling. The license is FTL.

License:             BSD3
License-file:        LICENSE
Author:              Andrew Richards <randrew@gmail.com>, Eyal Lotem <eyal.lotem@gmail.com>
Maintainer:          Andrew Richards <randrew@gmail.com>
Category:            Graphics
Build-type:          Simple
Extra-source-files:  src/*.[ch]
                     src/fonts/*.ttf src/fonts/VERA-COPYRIGHT
                     windows/glew.c
                     windows/include/GL/glew.h windows/include/GL/wglew.h windows/include/GL/glxew.h
Data-files:          shaders/text.frag shaders/text.vert
                     src/shaders/v3f-t2f-c4f.vert src/shaders/v3f-t2f-c4f.frag

Cabal-version:       >=1.8

Flag use_font_config
-- problematic on windows
  Description: Build with fontconfig support
  Default: False

Library
  -- Modules exported by the library.
  Exposed-modules: Graphics.Rendering.Electrotype,
                   Graphics.Rendering.Electrotype.Internal.Shader,
                   Graphics.Rendering.Electrotype.Internal.TextureFont,
                   Graphics.Rendering.Electrotype.Internal.VertexBuffer
  Other-modules:   Paths_electrotype

  -- Packages needed in order to build this package.
  -- "freetype2" and "OpenGL" deps are just for the C build side
  Build-depends: base > 3 && < 5, bytestring, freetype2 >= 0.1.2,
                 OpenGLRaw, OpenGL >= 2.8.0.0, data-default, linear

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: hsc2hs
  ghc-options: -Wall
  -- Disable assertions in the C code.
  cc-options: -DNDEBUG
  include-dirs: src
  if os(windows)
    include-dirs: windows/include

  if flag(use_font_config)
    cc-options: -DUSE_FONT_CONFIG
    Extra-libraries: fontconfig

  c-sources: src/edtaa3func.c
             src/font-manager.c
             src/mat4.c
             src/platform.c
             src/text-buffer.c
             src/texture-atlas.c
             src/texture-font.c
             src/vector.c
             src/vertex-attribute.c
             src/vertex-buffer.c
             src/utils.c
  if os(windows)
    c-sources: windows/glew.c
    cc-options: -Wno-attributes

source-repository head
  type: git
  location: git://github.com/randrew/electrotype.git
